# octopus-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-ghcr.yml
octopus_python/: __init__.py  __main__.py  app.py  config.py  database.py  relay.py  schemas.py  security.py  services.py
tests/: test_app.py
